ensure z-index only lives on specific event classNames or containers

--- a/premium/packages/resource-timeline/src/styles/resource-timeline.css
+++ b/premium/packages/resource-timeline/src/styles/resource-timeline.css
@@ -1,10 +1,7 @@
 
-
-.fc-resource-timeline .fc-timeline-lane-misc,
-.fc-resource-timeline .fc-timeline-events {
-  position: relative; // scope event positions within
-
-  // HACK to get fc-timeline-lane-misc above the background but under the events container
-  // We can't insert fc-timeline-lane-misc inbetween DOM-wise because TimelineLane is one Fragment
-  z-index: $event-z;
+// HACK to get fc-timeline-lane-misc above the background but under the events container
+// We can't insert fc-timeline-lane-misc inbetween DOM-wise because TimelineLane is one Fragment
+.fc-timeline-lane-misc {
+  position: relative;
+  z-index: $event-z; // above fc-timeline-slots
 }
