--- a/premium/packages/timeline/src/styles/timeline.css
+++ b/premium/packages/timeline/src/styles/timeline.css
@@ -3,8 +3,17 @@
 // fc-timeline-slots
 //
 
-.fc-timeline-slots {
+.fc-timeline-slots { // already position:absolute (fc-fill)
   z-index: $fg-z;
+}
+
+//
+// fc-timeline-events
+//
+
+.fc-timeline-events {
+  position: relative;
+  z-index: $event-z;
 }
 
 //
