--- a/standard/packages/timegrid/src/styles/v-event.css
+++ b/standard/packages/timegrid/src/styles/v-event.css
@@ -7,8 +7,6 @@
 //
 
 .fc-v-event {
-  z-index: $event-z;
-
   display: flex;
   flex-direction: column;
   border: 1px solid var(--fc-event-border-color);
